# simhash

./: CMakeLists.txt
example/: CMakeLists.txt  demo.cc
include/simhash/: simhasher.hpp
